--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
 .main-login{
     width: 100vw;
     height: 100vh;
-    background: #E6E6FA;
+    background: #ddd9ce;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,5 +21,29 @@ body{
 }
 
 .left-login > h1{
+    color:black ;
+} 
+
+.right-login{
+    width: 50vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-login{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 140px 60px;
+    background:#dc143c ;
+    border-radius: 20px;
+    box-shadow: 0px 10px 40px #8b0000;
+}
+
+.card-login >h1{
     color: ;
 }
