--- a/css/style.css
+++ b/css/style.css
@@ -45,5 +45,23 @@ body{
 }
 
 .card-login >h1{
-    color: ;
+    font-weight: 900;
+    margin: 0;
 }
+
+.textfield{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content:center ;
+}
+
+.textfield >input{
+    width: 100%;
+    border: none;
+    border-radius:10px;
+    padding: 10px;
+    font-size: 12pt;
+
+}
+
